Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-2264

GenerateFlowFile: 'Custom Text' is not reevaluated

    XMLWordPrintableJSON

Details

    Description

      'Unique flow files' must be false for the custom text to be evaluated, but in that case, it should be reevaluated on every trigger, like in NiFi. This allows EL expressions like now() or nextInt() to return different values each time.

      Attachments

        Issue Links

          Activity

            People

              MZink Martin Zink
              szaszm Marton Szasz
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h
                  3h