MINIFICPP-2264 GenerateFlowFile: 'Custom Text' should be reevaluated once per batch